[package]
authors = [
  "Matt Butcher <matt.butcher@microsoft.com>",
  "Matthew Fisher <matt.fisher@microsoft.com>",
  "Radu Matei <radu.matei@microsoft.com>",
  "Taylor Thomas <taylor.thomas@microsoft.com>",
  "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
  "Brian Hardock <Brian.Hardock@microsoft.com>",
  "Ryan Levick <rylevick@microsoft.com>",
  "Kevin Flansburg <kevin.flansburg@gmail.com>",
  "Flavio Castelli <fcastelli@suse.com>",
]
description = "An OCI implementation in Rust"
edition = "2021"
keywords = ["oci", "containers"]
license = "Apache-2.0"
name = "oci-distribution"
readme = "README.md"
repository = "https://github.com/krustlet/oci-distribution"
version = "0.11.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["native-tls", "test-registry"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
trust-dns = ["reqwest/trust-dns"]
# This features is used by tests that use docker to create a registry
test-registry = []

[dependencies]
bytes = "1"
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3"
http = "1.1"
http-auth = { version = "0.1", default_features = false }
jwt = "0.16"
lazy_static = "1.4"
olpc-cjson = "0.1"
regex = "1.6"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.21", features = ["macros", "io-util"] }
tracing = { version = "0.1", features = ['log'] }
unicase = "2.6"

[dev-dependencies]
assert-json-diff = "2.0.2"
async-std = "1.12"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rstest = "0.18.1"
docker_credential = "1.0"
hmac = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.3"
testcontainers = "0.15"
tokio = { version = "1.21", features = ["macros", "fs", "rt-multi-thread"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
