[package]
authors = [
  "Matt Butcher <matt.butcher@microsoft.com>",
  "Matthew Fisher <matt.fisher@microsoft.com>",
  "Radu Matei <radu.matei@microsoft.com>",
  "Taylor Thomas <taylor.thomas@microsoft.com>",
  "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
  "Brian Hardock <Brian.Hardock@microsoft.com>",
  "Ryan Levick <rylevick@microsoft.com>",
  "Kevin Flansburg <kevin.flansburg@gmail.com>",
  "Flavio Castelli <fcastelli@suse.com>",
]
description = "An OCI implementation in Rust"
edition = "2021"
keywords = ["oci", "containers"]
license = "Apache-2.0"
name = "oci-client"
readme = "README.md"
repository = "https://github.com/oras-project/rust-oci-client"
version = "0.12.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["native-tls", "test-registry"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
trust-dns = ["reqwest/trust-dns"]
# This features is used by tests that use docker to create a registry
test-registry = []

[dependencies]
bytes = "1"
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3"
http = "1.1"
http-auth = { version = "0.1", default-features = false }
jwt = "0.16"
lazy_static = "1.4"
olpc-cjson = "0.1"
regex = "1.6"
reqwest = { version = "0.12.4", default-features = false, features = [
  "json",
  "stream",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.21", features = ["macros", "io-util"] }
tracing = { version = "0.1", features = ['log'] }
unicase = "2.6"

[dev-dependencies]
assert-json-diff = "2.0.2"
async-std = "1.12"
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
rstest = "0.22.0"
docker_credential = "1.0"
hmac = "0.12"
itertools = "0.13.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.3"
# This should stay pinned here until testcontainers makes sure all of its deps using rustls are
# using the ring feature. Otherwise this fails to compile on Windows
testcontainers = "0.20"
tokio = { version = "1.21", features = ["macros", "fs", "rt-multi-thread"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
