[package]
authors = [
  "Matt Butcher <matt.butcher@microsoft.com>",
  "Matthew Fisher <matt.fisher@microsoft.com>",
  "Radu Matei <radu.matei@microsoft.com>",
  "Taylor Thomas <taylor.thomas@microsoft.com>",
  "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
  "Brian Hardock <Brian.Hardock@microsoft.com>",
  "Ryan Levick <rylevick@microsoft.com>",
  "Kevin Flansburg <kevin.flansburg@gmail.com>",
  "Flavio Castelli <fcastelli@suse.com>",
]
description = "An OCI implementation in Rust"
documentation = "https://docs.rs/oci-client"
edition = "2021"
homepage = "https://github.com/oras-project/rust-oci-client"
keywords = ["oci", "containers"]
license = "Apache-2.0"
name = "oci-client"
readme = "README.md"
repository = "https://github.com/oras-project/rust-oci-client"
version = "0.15.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["rustls-tls", "test-registry"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]
hickory-dns = ["reqwest/hickory-dns"]
# This features is used by tests that use docker to create a registry
test-registry = []

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
http = "1.3"
http-auth = { version = "0.1", default-features = false }
jsonwebtoken = "10.2"
lazy_static = "1.4"
oci-spec = "0.8"
olpc-cjson = "0.1"
regex = "1.11"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "query",
  "stream",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "io-util"] }
tracing = { version = "0.1", features = ['log'] }
unicase = "2.8"

[dev-dependencies]
assert-json-diff = "2.0"
anyhow = "1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
rstest = "0.26"
docker_credential = "1.3"
hmac = "0.12"
itertools = "0.14"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.21"
# This should stay pinned here until testcontainers makes sure all of its deps using rustls are
# using the ring feature. Otherwise this fails to compile on Windows
testcontainers = "0.26"
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
